Move overflow fix out of theme, since it is more of a generic jqueryui workaround

--- a/static/midcom.workflow/workflow.css
+++ b/static/midcom.workflow/workflow.css
@@ -9,6 +9,10 @@
     display: none;
 }
 
+.midcom-workflow-dialog .ui-dialog-content {
+    overflow: hidden;
+}
+
 .midcom-workflow-dialog .ui-widget-header.ui-dialog-titlebar {
     background-color: transparent;
     border-color: transparent;
