--- a/themes/OpenPsa2/static/jquery.ui.custom.css
+++ b/themes/OpenPsa2/static/jquery.ui.custom.css
@@ -1870,6 +1870,5 @@ ul.fancytree-container span.fancytree-folder a
 }
 
 .midcom-workflow-dialog .ui-dialog-content {
-    overflow: hidden;
     padding: 0;
 }
